Issue 4569 - Toolbar hidden behind list view

--- a/src/css/editor.scss
+++ b/src/css/editor.scss
@@ -24,6 +24,14 @@
 		// to make the iframe look good with small breakpoints
 		background-color: transparent !important;
 	}
+
+	.maxi-toolbar-opened {
+		z-index: 25;
+
+		.edit-post-editor__document-overview-panel {
+			transform: translateY(40px);
+		}
+	}
 }
 
 // Scrollbar fix for Safari
